# vidnet

./: .env.temp  Dockerfile  README.md  docker-compose.yml  mysql.cnf  pyproject.toml
.github/workflows/: github-actions-deploy.yml
project/auth_app/: forms.py  urls.py  views.py
project/auth_app/templates/auth_app/: login.html  reg.html
project/config/: settings.py  urls.py
project/friends_app/: urls.py
project/main_app/: urls.py  views.py
project/main_app/templates/main_app/: base.html  index.html
project/user_app/: models.py  urls.py  views.py
project/user_app/migrations/: 0001_initial.py
project/user_app/templates/user_app/: user_base.html  user_detail.html  user_form.html  user_friends.html
