[tool.poetry]
name = "vidnet"
version = "0.1.0"
description = ""
authors = []
license = ""

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
mysqlclient = "*"
django-mysql = "^4.5.0"
django-crispy-forms = '*'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
